# gestionale-scuola-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2c4bcbcbdbfe_init.py  df50ef3c4cf7_init.py
app/: __init__.py  main.py
app/api/graphql/: __init__.py  context.py  router.py
app/api/graphql/classe/: __init__.py  mutations.py  queries.py  types.py
app/api/graphql/professor/: __init__.py  mutations.py  queries.py  types.py
app/api/graphql/student/: __init__.py  mutations.py  queries.py  types.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  base_model.py  classe.py  classroom.py  grade.py  professor.py  professore.py  student.py  studente.py
app/schemas/: __init__.py  classe.py  classroom.py  grades.py  professor.py  professore.py  student.py  studente.py
app/services/: __init__.py  allowed_dependencies.py  class_services.py  grade_service.py  professor_services.py  student_service.py  student_services.py
