[project]
name = "python-roadmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.135.3",
    "greenlet>=3.5.2",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.49",
    "strawberry-graphql[fastapi]>=0.316.0",
]
